# grammers

grammers-client/: Cargo.toml
grammers-client/src/client/: chats.rs  updates.rs
grammers-session/: Cargo.toml
grammers-session/src/message_box/: mod.rs
